--- a/yote_root/html/templates/default_templates.html
+++ b/yote_root/html/templates/default_templates.html
@@ -20,9 +20,11 @@
 
     if( ctx.args.length > 1 ) {
         var template = ctx.args[ 0 ];
-        var pag_list = ctx.vars[ ctx.args[ 1 ] ].to_list();
-        var more     = ctx.args.length > 2 ? ctx.args.slice( 2 ) : [];
-        return pag_list.map( function ( item, idx ) {
+        var pag_list = ctx.parent.parse( ctx.args[ 1 ] );
+        var size     = ctx.args[ 2 ];
+        var more     = ctx.args.length > 3 ? ctx.args.slice( 3 ) : [];
+        pag_list.set_size( size );
+        return pag_list.to_list().map( function ( item, idx ) {
             return '<$$ _listfillpagrow ' + template + ' ' + ctx.args[ 1 ] + ' ' + idx + ' ' + more.join(' ') + ' $$>';
         } ).join('');
     }
@@ -34,12 +36,12 @@
 <script type="text/template" class="yote_template_definition" template_name="_listfillpagrow">
    <???
       var template = ctx.args[ 0 ]; // fillpagrow
-      var pag_list = ctx.vars[ ctx.args[ 1 ] ];
+      var pag_list = ctx.parent.parent.parse( ctx.args[ 1 ] );
       var list     = pag_list.to_list();
       var idx      = ctx.args[ 2 ];
       var more = ctx.args.length > 3 ? ctx.args.slice( 3 ) : [];
       ctx.vars._ = list[ idx ];
-      ctx.vars._index_ = 1*idx + pag_list._start;
+      ctx.vars._index_ = Number(idx) + pag_list._start;
       return '<$$ ' + template + ' ' + more.join( ' ' ) + ' $$>';
     ???>
 </script>
@@ -54,7 +56,7 @@
     <???
     if( ctx.args.length > 1 ) {
         var template = ctx.args[ 0 ];
-        var list = ctx.vars[ ctx.args[ 1 ] ];
+        var list = ctx.parse( ctx.args[ 1 ] );
         var more = ctx.args.length > 2 ? ctx.args.slice( 2 ) : [];
         return list.map( function ( item, idx ) {
             return '<$$ _listfillrow ' + template + ' ' + ctx.args[ 1 ] + ' ' + idx + ' ' + more.join(' ') + ' $$>';
@@ -68,7 +70,7 @@
 <script type="text/template" class="yote_template_definition" template_name="_listfillrow">
    <???
       var template = ctx.args[ 0 ];
-      var list     = ctx.vars[ ctx.args[ 1 ] ];
+      var list     = ctx.parse( ctx.args[ 1 ] );
       var idx      = ctx.args[ 2 ];
       var more = ctx.args.length > 3 ? ctx.args.slice( 3 ) : [];
       ctx.vars._ = list[ idx ];
@@ -88,7 +90,7 @@
 
     if( ctx.args.length > 1 ) {
         var template = ctx.args[ 0 ];
-        var pag_keys = ctx.vars[ ctx.args[ 1 ] ].keys();
+        var pag_keys = ctx.parse( ctx.args[ 1 ] ).keys();
         var more     = ctx.args.length > 2 ? ctx.args.slice( 2 ) : [];
         return pag_keys.map( function ( item, idx ) {
             return '<$$ _hashfillpagrow ' + template + ' ' + ctx.args[ 1 ] + ' ' + item + ' ' + more.join(' ') + ' $$>';
@@ -102,7 +104,8 @@
 <script type="text/template" class="yote_template_definition" template_name="_hashfillpagrow">
    <???
       var template = ctx.args[ 0 ]; // fillpagrow
-      var hash     = ctx.vars[ ctx.args[ 1 ] ].to_hash();
+      var hash_pag = ctx.parse( ctx.args[ 1 ] );
+      var hash = hash_pag.to_hash();
       var key      = ctx.args[ 2 ];
       var more = ctx.args.length > 3 ? ctx.args.slice( 3 ) : [];
       ctx.vars._ = hash[ key ];
@@ -122,7 +125,7 @@
     <???
     if( ctx.args.length > 1 ) {
         var template = ctx.args[ 0 ];
-        var hash = ctx.vars[ ctx.args[ 1 ] ];
+        var hash = ctx.parse( ctx.args[ 1 ] );
         var more = ctx.args.length > 2 ? ctx.args.slice( 2 ) : [];
         var keys = Object.keys( hash );
         return keys.map( function ( item, idx ) {
@@ -137,7 +140,7 @@
 <script type="text/template" class="yote_template_definition" template_name="_hashfillrow">
    <???
       var template = ctx.args[ 0 ];
-      var hash     = ctx.vars[ ctx.args[ 1 ] ];
+      var hash     = ctx.parse( ctx.args[ 1 ] );
       var key      = ctx.args[ 2 ];
       var more = ctx.args.length > 3 ? ctx.args.slice( 3 ) : [];
       ctx.vars._ = hash[ key ];
@@ -154,10 +157,10 @@
        editing object directly. #>
     <???
          if( ctx.args.length == 4 ) {
-             var list   = ctx.vars[ ctx.args[ 0 ] ];
-             ctx.vars.object = ctx.vars[ ctx.args[ 1 ] ];
+             var list = ctx.parse( ctx.args[ 0 ] );
+             ctx.vars.object = ctx.parse( ctx.args[ 1 ] );
              ctx.vars.hash = ctx.args[ 2 ];
-             ctx.vars.field = ctx.vars[ ctx.args[ 3 ] ];
+             ctx.vars.field = ctx.parse( ctx.args[ 3 ] );
              var curval = ctx.vars.object.hash_fetch( { name : ctx.vars.hash, key : ctx.vars.field } );
              // TODO - escap the value there
              return '<$$$ sel <select> $$$>' + list.map(function(it,idx) { return '<option ' + ( curval == it ? ' selected ' : '' ) + ' value="' + it + '">' + it + '</option>' } ).join('') + '</select>';
@@ -179,7 +182,7 @@
 <script type="text/template" class="yote_template_definition" template_name="escape_html">
   <???
       if( ctx.args.length*1 == 1 ) {
-          var val = ctx.vars[ ctx.args[ 0 ] ];
+          var val = ctx.parse( ctx.args[ 0 ] );
           console.log( val );
           return val;
 	  }
@@ -281,7 +284,7 @@
 
 <script type="text/template" class="yote_template_definition" template_name="Paginator">
  <???
-     var collection = ctx.parent.vars[ ctx.args[ 0 ] ];
+     var collection = ctx.parent.parse( ctx.args[ 0 ] );
      if( collection.can_rewind() || collection.can_fast_forward() ) {
          return '<$$$ paginate_to_beginning_button <button type="BUTTON">&laquo;</button> $$$>' +
       '<$$$ paginate_back_button <button type="BUTTON">&lsaquo;</button> $$$>' +
@@ -291,9 +294,10 @@
       return '';
   ???>
  <?
+
      if( ctx.args.length < 1 ) return;
 
-     var collection = ctx.parent.vars[ ctx.args[ 0 ] ];
+     var collection = ctx.parent.parse( ctx.args[ 0 ] );
 
      if( ! collection || ! collection.can_rewind ) { //test if it has that function
          console.log( 'warning : init_paginator called for something not a list or hash' );
@@ -307,12 +311,16 @@
      if( collection.can_rewind() ) {
          $( pag_begin_button_id ).attr( 'disabled', false );
          $(  pag_back_button_id ).attr( 'disabled', false );
-         $(  pag_begin_button_id ).click( function() { collection.first();
-                                                       $.yote.reinit();
-                                                       ctx.refresh(); } );
-         $(  pag_back_button_id ).click( function() { collection.back();
-                                                      $.yote.reinit();
-                                                      ctx.refresh(); } );
+         $(  pag_begin_button_id ).click( function() { 
+                           collection.first();
+                           $.yote.reinit();
+                           ctx.refresh(); 
+                           } );
+         $(  pag_back_button_id ).click( function() { 
+                           collection.back();
+                           $.yote.reinit();
+                           ctx.refresh(); 
+                           } );
      } else {
          $(  pag_begin_button_id ).attr( 'disabled', true );
          $(  pag_back_button_id ).attr( 'disabled', true );
@@ -346,7 +354,7 @@
           <$$$ go <button type="button">$$$>Search</button>
     <?
       if( ctx.args.length > 1 ) {
-          var data = ctx.vars[ ctx.args[ 0 ] ];
+          var data = ctx.parse( ctx.args[ 0 ] );
           var search_key = ctx.args[ 1 ] == 'keys';
           var search_fields = ctx.args.slice( 2 );
           if( data._last_val ) {
@@ -356,7 +364,6 @@
               button : ctx.controls.go,
               texts : [ ctx.controls.srchtxt ],
               action : function() {
-                  try { fsadfs() } catch(err ) {}
                   var val = $( ctx.controls.srchtxt ).val();
                   data._last_val = val;
                   if( search_key ) {
